@@ -6,7 +6,9 @@
 	Rename genericListener.listeners.restoreAllClass
 	-> genericListener.listeners.resetStyle
 	Define genericListener.listeners.setStyle function.
-
+	Modify genericListener.listeners.focusItem function to use
+	scrollIntoView.
+	
 2017-09-07  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/popup/popup.js:
